--- a/R_analyses/Report/RNAsep2_Annotation_Report.Rmd
+++ b/R_analyses/Report/RNAsep2_Annotation_Report.Rmd
@@ -90,6 +90,31 @@ kable(table1) %>%
 
 | The identification of potentially protein-coding regions in transcripts was performed with *TransDecoder* on the thinned assembly. Overall, **39804 ORFs** were identified and then submited to functional annotation.
 
+### **Functional annotation**
+
+| Several tools were used to annotate the assembly :
+
++ **BLAST (x & p)** annotated 28407 transcripts against the SwissProt UniProt database;
+
++ **EggNOG-mapper** identified 28313 orthologous hits and annotated 21692 transcripts with GO terms, 19471 transcripts with KEGG_ko, 10775 transcripts associated to KEGG_pathways and 27868 transcripts matching PFAM entries. The occurrence of the top 20 GO terms by spacename are represented in the following figure:
+
+```{r echo=FALSE, warning=FALSE, message=FALSE}
+tar_read(GOPlot.SEP1)
+```
+
++ **Reactome** was also used to predict the pathways in which the assembled transcripts were involved. The following figure shows the number of transcripts related to the main Reactome pathways:
+
+```{r echo=FALSE, warning=FALSE, message=FALSE}
+tar_read(PlotReactome.SEP1)
+```
+
+
+| Finally, the efficiency of each annotation type is summarised in the figure below:
+
+```{r echo=FALSE, warning=FALSE, message=FALSE}
+tar_read(SumPlot.SEP1)
+```
+
 
 # **Current state of the annotation R workflow**
 
